# Magitian-Models

./: Cargo.toml  README.md
src/: git.rs  lib.rs  web.rs
src/access/: access_tokens.rs  organization.rs  user.rs
src/git/: commit.rs  push.rs  repository.rs
src/web/: comment.rs  issue.rs
src/web/forms/: login.rs
