[package]
name = "magitian_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
git2 = "0.16.1"
serde = "1.0.152"
serde_derive = "1.0.152"
uuid = { version = "1.2.2", features = ["v4"] }
